# pjecz-citas-v2-admin-api-oauth2

./: .gcloudignore  .gitignore  Dockerfile  README.md  arrancar.py  main.py  pyproject.toml  requirements.txt
citas_admin/: app.py
citas_admin/v2/autoridades/: crud.py  models.py  paths.py  schemas.py
citas_admin/v2/cit_categorias/: crud.py  models.py  paths.py  schemas.py
citas_admin/v2/cit_citas/: crud.py  models.py  paths.py  schemas.py
citas_admin/v2/cit_citas_anonimas/: crud.py
citas_admin/v2/cit_clientes/: crud.py  models.py  paths.py  schemas.py
citas_admin/v2/cit_clientes_recuperaciones/: crud.py  models.py  paths.py  (+1 more)
cli/: README.md  api.py  app.py  autentificar.py  cit_citas.py  cit_clientes.py  cit_clientes_recuperaciones.py  cit_clientes_registros.py  cli_clientes_registros.py  exceptions.py  main.py
cli/cit_citas/: crud.py  main.py
cli/cit_clientes/: crud.py  main.py
cli/cit_clientes_registros/: crud.py  main.py
cli/config/: settings.py
cli/lib/: connections.py
config/: settings.py
lib/: AESEncryption.py  exceptions.py  fastapi_pagination_custom.py  fastapi_pagination_custom_list.py  fastapi_pagination_custom_page.py  hashids.py  safe_string.py  santander_web_pay_plus.py  schemas_base.py  universal_mixin.py
notebooks/: cit_citas.ipynb  citas_admin  enc_servicios.ipynb  enc_sistemas.ipynb
rest-client/: README.md  agendar_una_cita.rest  catalogos.rest  cit_citas.rest  cit_clientes.rest  cit_clientes_recuperaciones.rest  cit_clientes_registros.rest  cit_dias_disponibles.rest  enc_servicios.rest  enc_sistemas.rest  usuarios.rest
(+143 files in other folders)
