[tool.poetry]
name = "pjecz-citas-v2-admin-api-oauth2"
version = "1.0"
description = "API Key para administrar el Sistema de Citas"
authors = ["Guillermo Valdes <guillermo.valdes@pjecz.gob.mx>"]
license = "AGPL3"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.79.0"
fastapi-pagination = {extras = ["sqlalchemy"], version = "^0.9.3"}
gunicorn = "^20.1.0"
hashids = "^1.3.1"
nest-asyncio = "^1.5.6"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
psycopg2-binary = "^2.9.3"
pydantic = "^1.9.1"
python-dotenv = "^0.21.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
python-multipart = "^0.0.5"
pytz = "^2022.2.1"
requests = "^2.29.0"
SQLAlchemy = "^1.4.39"
SQLAlchemy-Utils = "^0.38.3"
Unidecode = "^1.3.4"
uvicorn = "^0.18.2"

[tool.poetry.dev-dependencies]
pylint = "^2.14.5"
pylint-sqlalchemy = "^0.2.0"
black = "^22.6.0"
ipykernel = "^6.15.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 256
